# chatbot_SampleSize

./: .gitignore  CLAUDE.md  Makefile  README.md  Research Handoff agent.json  findings.md  progress.md  render.yaml  task_plan.md
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: auth.py  config.py  db.py  main.py  models.py
backend/app/agents/: biostatistics.py  graph.py  helpers.py  methodology.py  orchestrator.py  progress.py  prompt_composer.py  prompts.py  research_gap.py  state.py
backend/app/api/: billing.py  chat.py  files.py  profile.py  projects.py  sessions.py
backend/app/data/: reference_registry.py
backend/app/services/: billing.py  citation_extractor.py  code_executor.py  file_processor.py  llm.py  memory.py  message_logger.py  protocol_export.py  summary.py  tavily.py
backend/migrations/: 001_sessions.sql  002_message_logs.sql  003_token_logs.sql  004_session_end.sql  005_session_evaluations.sql  006_user_id_on_sessions.sql  007_subscriptions.sql  008_usage_tracking.sql  009_webhook_events.sql  010_session_metadata.sql  011_session_deleted_at.sql  012_session_summary_cache.sql  013_user_profiles.sql
backend/tests/: conftest.py  test_agents.py  test_auth.py  test_billing.py  test_citation_extractor.py  test_code_executor.py  test_confidence.py  test_expertise_level.py  test_format.py  test_graph.py  test_helpers.py  test_memory.py  test_projects.py  test_protocol_export.py  test_routing.py  test_sessions_api.py  test_state.py  test_summary.py
evaluation/: __init__.py  analyze_results.py  batch_rejudge.py  config.py  runner.py  (+2 more)
(+115 files in other folders)
